[IMP] web: reusable calendar colors
Calendar popover style colors are currently computed and set on specific
classes. Instead first build a list of colors so they can be reused
elsewhere. Notably for gantt popups in the context of meetings.

task-4909129

Part-of: odoo/odoo#222741
Related: odoo/enterprise#92263
Related: odoo/upgrade#8262
Signed-off-by: Thibault Delavallee (tde) <tde@openerp.com>

--- a/addons/web/static/src/views/calendar/calendar_common/calendar_common_popover.scss
+++ b/addons/web/static/src/views/calendar/calendar_common/calendar_common_popover.scss
@@ -75,13 +75,29 @@ $o-cw-popup-avatar-size: 16px;
     }
 }
 
-@for $i from 1 through length($o-colors-complete) {
-    $color: nth($o-colors-complete, $i);
-    $color-subtle: mix($o-white, $color, 55%);
+// Put logic in a function so that temporary variable like $-color
+// are not assigned to the global scope and potentially mess with
+// other global variables
+@function o-build-web-calendar-colors() {
+    $-calendar-colors: ();
+    @for $i from 1 through length($o-colors-complete) {
+        $-color: nth($o-colors-complete, $i);
+        $-color-subtle: mix($o-white, $-color, 55%);
+        $-calendar-colors: append($-calendar-colors, (
+            color-subtle: $-color-subtle,
+            popover-background-color: lighten($-color-subtle, 10%),
+            popover-color:  color-contrast($-color-subtle),
+        ));
+    }
+    @return $-calendar-colors;
+}
+$o-web-calendar-colors: o-build-web-calendar-colors();
 
+
+@for $i from 1 through length($o-web-calendar-colors) {
     .modal.o_technical_modal.o_modal_full .modal-dialog .modal-content.o_calendar_color_#{$i - 1} {
         .modal-header {
-            background-color: $color-subtle;
+            background-color: map-get(nth($o-web-calendar-colors, $i), "color-subtle");
 
             .btn {
                 color: $body-color;
@@ -90,14 +106,15 @@ $o-cw-popup-avatar-size: 16px;
     }
 
     .o_cw_popover.o_calendar_color_#{$i - 1} {
+        $-calendar-colors-map: nth($o-web-calendar-colors, $i);
         .card-header,
         .card-header .popover-header {
-            background-color: lighten($color-subtle, 10%);
-            color: color-contrast($color-subtle);
+            background-color: map-get($-calendar-colors-map, "popover-background-color");
+            color: map-get($-calendar-colors-map, "popover-color");
         }
 
         .card-header {
-            --#{$variable-prefix}card-border-color: #{$color-subtle};
+            --#{$variable-prefix}card-border-color: #{map-get($-calendar-colors-map, "color-subtle")};
         }
     }
 }
