[IMP] account,base: prevent changing currency decimals
PURPOSE
- Changing the currency rounding factor corrupts accounting data.
- The change is irreversible once applied, making invoices and reports invalid
  due to extra decimals.
- In most cases, users need price precision, not rounding changes.
- Therefore, users should be redirected to the correct setting for changing
  price precision.

SPECIFICATION
- Simplify the form by hiding the Price Accuracy section, which is currently
  only visible in debug mode. (Previously, this was handled server-side and
  required a reload; now it will be handled on the client-side.)
- When the rounding factor is modified, show a warning message explaining why
  this is a bad idea and recommend changing it via,
  Settings > Technical > Decimal Accuracy.
- If the user tries to save after the warning, display a confirmation dialog.
  Only upon confirming should the change be saved.

task-4984276

closes odoo/odoo#223566

Signed-off-by: Habib Ayob (ayh) <ayh@odoo.com>

--- a/addons/account/views/res_currency.xml
+++ b/addons/account/views/res_currency.xml
@@ -7,10 +7,25 @@
             <field name="model">res.currency</field>
             <field name="inherit_id" ref="base.view_currency_form"/>
             <field name="arch" type="xml">
-                <xpath expr="//sheet" position="before">
-                    <div class="alert alert-warning" role="alert" invisible="not display_rounding_warning">
-                        <strong>This currency has already been used to generate accounting entries.</strong> <br/>
-                        Changing its rounding factor now will not change the rounding made on previous entries; possibly causing an inconsistency with the new ones.
+                <form position="attributes">
+                    <attribute name="js_class">currency_form</attribute>
+                </form>
+
+                <xpath expr="//field[@name='decimal_places']" position="after">
+                    <div colspan="2" invisible="not display_rounding_warning" class="alert alert-danger" role="alert">
+                        <p class="m-0">
+                            <strong>WARNING - This change is irreversible</strong>
+                        </p>
+
+                        <p class="mt-1 mb-2">
+                            You are changing decimals in your entire database, including invoices,
+                            tax amounts, accounting amounts, reports. This is probably not intended.
+                        </p>
+
+                        <div>
+                            <field name="display_rounding_warning"
+                               widget="open_decimal_precision_button"/>
+                        </div>
                     </div>
                 </xpath>
             </field>
