[IMP] ir.qweb: Make `t-call` parametric and make lazy XML evaluation
This commit introduces major improvements to QWeb: parametric `t-call`,
lazy XML evaluation.

Previously, parameters passed to a template through `t-call` were
defined inside the `t-call` element using `t-set` elements.  The content
inside the `t-call` was evaluated within the context of the called
template.

Now, `t-call` becomes **parametric**:
- Parameters are passed directly as **attributes** on the `t-call` tag instead
  of using internal `t-set` definitions.
- The content inside the `t-call` tag no longer has access to these parameters;
  it only sees the variables available **before the `t-call`**.
- The attributes passed to `t-call` are used **only for rendering the called
  template** and **not** for the content inside the `t-call`.

**Example before:**
```xml
<t t-call="my_template">
    <t t-set="custom" t-value="x + y" />
    <t t-set="add_class" t-valuef="o_toto_{{stuff}}" />
    <t t-set="title">Hello <t t-out="user.name"/></t>
</t>
```
**Example after:**
```xml
<t t-call="my_template" custom="x + y" add_class.f="o_toto_{{stuff}}" title.translate="Hello {{user.name}}" />
```

QWeb now also supports **lazy XML evaluation**:
- All XML content is now **lazy** and only evaluated **when explicitly
  rendered**, typically when using `t-out`.
- This also applies to XML content declared **inside `t-call` blocks**: the
  content is generated **only when actually output**.
- The variables available for evaluation are those present **at the time the
  content was declared**, not when it is rendered.
- As a result, **QWeb templates are now streamable**, allowing more efficient
  and predictable rendering.

Overall, this
- simplifies and clarifies `t-call` usage;
- prevents unexpected side effects on local contexts;
- enables **lazy evaluation** and **streamable QWeb rendering**;
- support translatable formatted string on `t-call` parameters; and
- improves predictability, and maintainability of Q

--- a/addons/website_sale/views/templates.xml
+++ b/addons/website_sale/views/templates.xml
@@ -703,12 +703,9 @@
                                     <t t-if="is_view_active('website_sale.search')">
                                         <t t-set="_has_all_sibligns" t-value="hasPricelistDropdown and is_view_active('website_sale.sort') and wsale_has_filters_btn"></t>
                                         <!-- Desktop Search button -->
-                                        <div
-                                            t-attf-class="o_wsale_products_header_search_form_container {{ _has_all_sibligns and 'd-none d-sm-inline-block'}} col-xl-5 me-auto {{not hasLeftColumn and 'col-xl-6'}}"
-                                            t-call="website_sale.search"
-                                        >
+                                        <div t-attf-class="o_wsale_products_header_search_form_container {{ _has_all_sibligns and 'd-none d-sm-inline-block'}} col-xl-5 me-auto {{not hasLeftColumn and 'col-xl-6'}}">
                                             <t t-if="category" t-set="placeholder">Search in <t t-out="category.name"/></t>
-                                            <t t-set="search" t-value="original_search or search"/>
+                                            <t t-call="website_sale.search" placeholder="placeholder" search="original_search or search"/>
                                         </div>
                                         <!-- Mobile Search button -->
                                         <a
@@ -814,7 +811,7 @@
                             </div>
                             <div t-else="" class="text-center text-muted mt128 mb256">
                                 <t t-if="not search">
-                                    <div t-call="website.empty_search_svg" class="mt-5 mb-3"/>
+                                    <div class="mt-5 mb-3"><t t-call="website.empty_search_svg"/></div>
                                     <h3
                                         class="mt8"
                                         style="text-align: center;"
@@ -829,7 +826,7 @@
                                     </p>
                                 </t>
                                 <t t-else="">
-                                    <div t-call="website.empty_search_svg" class="mt-5 mb-3"/>
+                                    <div class="mt-5 mb-3"><t t-call="website.empty_search_svg"/></div>
                                     <h3 class="mt8" style="text-align: center;">No results</h3>
                                     <p style="text-align: center;">
                                         No results for "<strong t-out='search'/>"<t t-if="category"> in category "<strong t-out="category.display_name"/>"</t>.
@@ -2821,7 +2818,7 @@
             t-if="not website_sale_order or not website_sale_order.website_order_line"
             class="js_cart_lines w-100"
         >
-            <div t-call="website_sale.empty_cart_svg" class="mt-5 mb-3"/>
+            <div class="mt-5 mb-3"><t t-call="website_sale.empty_cart_svg"/></div>
             <h5 class="mb-3" style="text-align: center;">
                 Your cart is empty!
             </h5>
@@ -2902,10 +2899,7 @@
                                             />
                                         </div>
                                     </div>
-                                    <div
-                                        t-attf-class="{{'d-block d-md-none' if not is_combo else ''}}"
-                                        t-call="website_sale.cart_lines_price"
-                                    />
+                                    <div t-attf-class="{{'d-block d-md-none' if not is_combo else ''}}"><t t-call="website_sale.cart_lines_price"/></div>
                                 </div>
                                 <t t-call="website_sale.cart_line_description_following_lines"/>
                                 <ul t-if="is_combo" class="list-group">
@@ -2928,30 +2922,20 @@
                                     >
                                         Remove
                                     </a>
-                                    <div
-                                        t-if="is_combo"
-                                        class="d-none d-md-block ms-auto"
-                                        t-call="website_sale.cart_lines_quantity"
-                                    />
+                                    <div t-if="is_combo" class="d-none d-md-block ms-auto"><t t-call="website_sale.cart_lines_quantity"/></div>
                                 </div>
                             </div>
                             <div t-if="not is_combo" class="d-none d-md-block">
                                 <t t-call="website_sale.cart_lines_price"/>
-                                <div
-                                    class="d-none d-md-block mt-2"
-                                    t-call="website_sale.cart_lines_quantity"
-                                />
+                                <div class="d-none d-md-block mt-2"><t t-call="website_sale.cart_lines_quantity"/></div>
                             </div>
                         </div>
                         <div
                             name="o_wsale_cart_line_button_container_mobile"
                             class="d-flex d-md-none"
                         >
-                            <div
-                                class="d-flex d-md-none align-items-center me-auto"
-                                t-call="website_sale.cart_lines_quantity"
-                            >
-                                <t t-set="is_mobile" t-value="True"/>
+                            <div class="d-flex d-md-none align-items-center me-auto">
+                                <t t-call="website_sale.cart_lines_quantity" is_mobile="True"/>
                             </div>
                             <button
                                 class="js_delete_product btn btn-link d-inline-block d-md-none px-2"
@@ -3112,7 +3096,7 @@
             ">
                 <div class="d-flex align-items-center mb-3">
                     <h4 class="mb-0">Order summary</h4>
-                    <div t-call="website_sale.quick_reorder_button" class="ms-3 border-start ps-2"/>
+                    <div class="ms-3 border-start ps-2"><t t-call="website_sale.quick_reorder_button"/></div>
                 </div>
                 <div t-if="abandoned_proceed or access_token" class="alert alert-info mt8 mb8" role="alert"> <!-- abandoned cart choices -->
                     <t t-if="abandoned_proceed">
