[FIX] stock_delivery: pick packages without type when no carrier
The override made in `stock_delivery` filters out packages that don't
have a type handled by the carrier.
However, by using `package_type_id.package_carrier_type` in the domain,
it implicitly restricts on package that have a package_type, which is
not something we'd want if no carrier are involved.

Task-4314600

Part-of: odoo/odoo#225184
Related: odoo/enterprise#93733
Signed-off-by: Arnold Moyaux (arm) <arm@odoo.com>

--- a/addons/stock_delivery/wizard/stock_put_in_pack_views.xml
+++ b/addons/stock_delivery/wizard/stock_put_in_pack_views.xml
@@ -22,7 +22,7 @@
             </field>
             <field name="result_package_id" position="attributes">
                 <attribute name="domain">
-                    [('package_type_id.package_carrier_type', '=?', package_carrier_type), ('package_type_id', '=?', package_type_id), '|', '|', ('location_id', '=', False), ('location_id', '=', location_dest_id), ('id', 'in', origin_package_ids)]
+                    [('package_carrier_type', '=?', package_carrier_type), ('package_type_id', '=?', package_type_id), '|', '|', ('location_id', '=', False), ('location_id', '=', location_dest_id), ('id', 'in', origin_package_ids)]
                 </attribute>
             </field>
         </field>
