[FIX] website_sale: fix wishlist price position
This commit fixes an issue where the product price did not receive the
correct styling on the wishlist page. The problem occurs because
different class names are used depending on whether the page is `/shop`
or `/wishlist` (for example, `.product-price` vs. `.o_wish_price`, or
`.o_add_compare` vs. `.o_add_to_compare`). Previously, only the class
name used on the shop page was targeted for styling.

With this commit we use consistent class targeting across both pages.
Next step: See if we can't use a single class instead.

task-4997342
part of task-4252024

--- a/addons/website_sale/static/src/scss/product_tile.scss
+++ b/addons/website_sale/static/src/scss/product_tile.scss
@@ -283,7 +283,7 @@
         order: var(--o-wsale-card-sub-order, 6);
         flex-grow: var(--o-wsale-card-sub-flex-grow);
     }
-    .product_price {
+    .product_price, .o_wish_price {
         display: var(--o-wsale-card-price-display);
         flex-direction: var(--o-wsale-card-price-flex-direction);
         flex-basis: var(--o-wsale-card-price-flex-basis);
@@ -530,7 +530,7 @@
             --o-wsale-card-btns-flex-direction: column;
         }
         @include media-breakpoint-up(md) {
-            .product_price {
+            .product_price, .o_wish_price {
                 margin: auto;
             }
         }
@@ -694,7 +694,7 @@
             --o-wsale-card-price-flex-basis: 100%;
             --o-wsale-card-info-attributes-justify-content: center;
 
-            .product_price {
+            .product_price, .o_wish_price {
                 margin: auto;
             }
         }
