[FIX] website: enforce file size limit check correctly
Steps to Reproduce:
- Open the website module.
- Drop a basic form snippet.
- Change the field type of any field to 'File Upload'.
- Set the 'Max File Size' to any value other than the default (1 MB)
and save the changes.
- Attempt to upload a file larger than the specified maximum file size.
It has been observed that a file larger than the allowed size is
successfully uploaded, which is incorrect behavior.

Before this commit:
The maximum file size limit `maxFileSize` was stored as a string with
units attached (XXMB), which caused comparison issues. This allowed
files larger than the configured limit to be uploaded, leading to
invalid submissions.

After this commit:
The `maxFileSize` value is now stored without any units, allowing for
accurate comparisons. As a result, the file size restriction functions
correctly: files exceeding the defined limit are blocked immediately
with a clear error message.

This issue was introduced in refactoring from public widget to
interactions:
https://github.com/odoo/odoo/commit/b9b3a605e0f4c5da3a258c980107d6162da7f44f#diff-8efed7e7078bb70d2262f7741cf6e703b9c61eda36cff9e268cdc93822045144

--- a/addons/website/static/src/builder/plugins/form/form_option.xml
+++ b/addons/website/static/src/builder/plugins/form/form_option.xml
@@ -209,6 +209,7 @@
             applyTo="`input[type='file']`"
             default="1"
             unit="'MB'"
+            applyWithUnit="false"
         />
     </BuilderRow>
     <BuilderRow t-if="state.valueList">
