--- a/addons/website_partner/views/website_partner_templates.xml
+++ b/addons/website_partner/views/website_partner_templates.xml
@@ -223,7 +223,7 @@
         <t id="partners_cards" t-foreach="partners.sorted(lambda p: p.grade_id.id)" t-as="partner">
             <t t-if="last_grade != partner.grade_id.id">
                 <h5 class="mt-3 mb-2 col-12">
-                    <span t-field="partner.grade_id"/> Partners
+                    <span t-field="partner.grade_id"/>
                     <t t-call="website.publish_management">
                         <t t-set="object" t-value="partner.grade_id"/>
                         <t t-set="publish_edit" t-value="True"/>
