--- a/addons/crm/views/crm_lead_views.xml
+++ b/addons/crm/views/crm_lead_views.xml
@@ -231,8 +231,8 @@
                             </group>
                             <field name="type" invisible="1"/>
                             <group invisible="type == 'lead'">
-                                <field name="user_id"
-                                    context="{'default_sales_team_id': team_id}" widget="many2one_avatar_user"/>
+                                <field name="user_id" context="{'default_sales_team_id': team_id}"
+                                    widget="many2one_avatar_leader_user" teamField="team_id"/>
                                 <label for="date_deadline">Expected Closing</label>
                                 <div class="d-flex gap-3 align-items-center">
                                     <field name="date_deadline" nolabel="1" class="oe_inline" placeholder="No closing estimate"/>
@@ -241,8 +241,8 @@
                                 <field name="tag_ids" widget="many2many_tags" options="{'color_field': 'color', 'no_create_edit': True}"/>
                             </group>
                             <group invisible="type == 'opportunity'">
-                                <field name="user_id"
-                                    context="{'default_sales_team_id': team_id}" widget="many2one_avatar_user"/>
+                                <field name="user_id" context="{'default_sales_team_id': team_id}"
+                                    widget="many2one_avatar_leader_user" teamField="team_id"/>
                                 <field name="team_id" options="{'no_open': True, 'no_create': True}" context="{'kanban_view_ref': 'sales_team.crm_team_view_kanban'}"/>
                             </group>
                             <group name="lead_priority" invisible="type == 'opportunity'">
